fixed navbar so collapse works

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,12 +19,12 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
-/* Typography styles */
+// Typography styles
 h1, h2, h3 {
   font-family: 'Open Sans', sans-serif;
 }
 
-/* Background gradient */
+// Background gradient
 .navbar, .home-callout {
   /* Gradient provided by @_ighosh at uiGradients.com */
   background: #00c6ff; /* fallback for old browsers */
@@ -32,7 +32,7 @@ h1, h2, h3 {
   background: linear-gradient(to left, #00c6ff , #0072ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-/* Navbar styles */
+// Navbar styles
 .navbar {
   border: none;
 }
@@ -48,6 +48,17 @@ h1, h2, h3 {
   &:hover {
     color: white;
     opacity: 0.75;
+  }
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: white;
+}
+
+.navbar-default .navbar-toggle {
+  border: 2px solid white;
+  &:hover, &:focus {
+    background-color: #00aeff;
   }
 }
 
